# rag-mcp

./: .gitignore  LICENSE  PROPOSAL.md  README.md  main.py  mcp  mcp_servers.json  pyproject.toml  requirements.txt  server.py
app/: chunker.py  vector_store.py
