[project]
name = "rag-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "chromadb>=0.4.24",
    "mcp[cli]>=0.1.0",
    "langchain-text-splitters>=1.1.0",
    "requests>=2.32.5",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.30.0",
    "ollama>=0.6.1",
]
